--- a/music.css
+++ b/music.css
@@ -16,7 +16,7 @@ html {
 .main_div {
   width: 100vw;
   height: 100vh;
-  background-color: #2c312c;
+  /* background-color: #2c312c;  */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,6 +28,7 @@ html {
   border-radius: 20px;
   /* border: solid 1px; */
   background-color: #769472;
+
   box-shadow: 0 1.2rem 3 rem 0.5rem rgba(0, 0, 0, 0.2);
   /* //#c0f7b9; */
   text-align: center;
@@ -150,6 +151,7 @@ img {
   width: 0%;
   height: 10px;
   background-color: rgb(109, 243, 105);
+
   border-radius: 10px;
   cursor: pointer;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
@@ -163,6 +165,52 @@ img {
   justify-content: space-between;
   font-size: 10px;
 }
+/* //Volume slider */
+
+.slider_container {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.volume_slider {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  height: 4px;
+  background: rgb(109, 243, 105);
+  border-radius: 10px;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.seek_slider::-webkit-slider-thumb,
+.volume_slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  background: #000000;
+
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.volume_slider:hover {
+  opacity: 1;
+}
+
+.volume_slider {
+  width: 30%;
+}
+
+i.fa-volume-down,
+i.fa-volume-up {
+  padding: 6px;
+}
+
 /* .main_div {
   width: 100vw;
   height: 100vh;
